Changed template for personal use

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Beckham - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Eklak Dangaura: Android/Web Developer</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -37,11 +37,11 @@
     <nav id="colorlib-main-nav" role="navigation">
       <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
       <div class="js-fullheight colorlib-table">
-        <div class="img" style="background-image: url(images/author-2.jpg);"></div>
+        <div class="img" style="background-image: url(images/azens_2.jpg);"></div>
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
-              <h1 class="mb-4"><a href="index.html" class="logo">Beckham Muff</a></h1>
+              <h1 class="mb-4"><a href="index.html" class="logo">Eklak Dangaura</a></h1>
               <ul>
                 <li class="active"><a href="index.html"><span><small>01</small>Home</span></a></li>
                 <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
@@ -62,7 +62,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="colorlib-navbar-brand">
-                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/person_1.jpg);"></span>Beckham Muff</a>
+                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/azens_1.jpg);"></span>Eklak Dangaura</a>
               </div>
               <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
             </div>
@@ -77,7 +77,7 @@
             <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
               <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                 <p><a href="#" class="scroll">Hello! I'm</a></p>
-                <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Beckham Muff</h1>
+                <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Eklak Dangaura</h1>
               </div>
             </div>
           </div>
@@ -88,8 +88,8 @@
           <div class="container">
             <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
               <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-                <p><a href="#" class="scroll">I'm from Berlin</a></p>
-                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">A Web Designer</h1>
+                <p><a href="#" class="scroll">I'm from Kathmandu, Nepal</a></p>
+                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">An Android Developer</h1>
               </div>
             </div>
           </div>
@@ -100,23 +100,25 @@
       <section class="ftco-section about-section">
         <div class="container">
           <div class="row d-flex" data-scrollax-parent="true">
-            <div class="col-md-4 author-img" style="background-image: url(images/author-1.jpg);" data-scrollax=" properties: { translateY: '-70%'}"></div>
+            <div class="col-md-4 author-img" style="background-image: url(images/azens_2.jpg);" data-scrollax=" properties: { translateY: '-70%'}"></div>
             <div class="col-md-2"></div>
             <div class="col-md-6 wrap ftco-animate">
               <div class="about-desc">
                 <h1 class="bold-text">About</h1>
                 <div class="p-5">
-                  <h2 class="mb-5">Hi! I'm Beckham Muff</h2>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in.</p>
+                  <h2 class="mb-5">Hi! I'm Eklak Dangaura</h2>
+                  <p>Engineer by Profession, Poet by hobby, Android Developer as per Work.<br>I am constantly in seek of new knowledge and tries to improve the previous ones.<br>
+                  One belive: "Always try to be your 100%, no matter what you do, where you do."</p>
                   <p><a href="#">Checkout my resume</a></p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
-                    <li><a href="#"><span class="icon-twitter"></span></a></li>
-                    <li><a href="#"><span class="icon-facebook"></span></a></li>
-                    <li><a href="#"><span class="icon-instagram"></span></a></li>
+                    <li><a href="https://www.twitter.com/azens1995"><span class="icon-twitter"></span></a></li>
+                    <li><a href="https://www.facebook.com/azens1995"><span class="icon-facebook"></span></a></li>
+                    <li><a href="https://www.medium.com/@azens1995"><span class="icon-medium"></span></a></li>
+                    <li><a href="https://join.skype.com/invite/oc08XICYoRCQ"><span class="icon-skype"></span></a></li>
                   </ul>
                   <h5>Contact me here!</h5>
-                  <p>Email: <a href="#">beckham@email</a></p>
-                  <p>Phone: <a href="#">(123)-456-789</a></p>
+                  <p>Email: <a href="#">azens1995@gmail.com</a></p>
+                  <p>Phone: <a href="#">(984)-877-8726</a></p>
                 </div>
               </div>
             </div>
@@ -137,9 +139,9 @@
               <div class="media block-6 services p-3 py-4 d-block text-center">
                 <div class="icon mb-3"><span class="icon-layers"></span></div>
                 <div class="media-body">
-                  <h3 class="heading">UI/UX Design</h3>
-                  <h3 class="heading">Mobile App Design</h3>
-                  <h3 class="heading">Responsive Design</h3>
+                  <h3 class="heading">Mobile App Development</h3>
+                  <h3 class="heading">Web Development</h3>
+                  <h3 class="heading">Poem/Article Writing</h3>
                 </div>
               </div>      
             </div>
@@ -271,7 +273,7 @@
               <div class="block-18">
                 <div class="text">
                   <span class="ftco-label">Clients</span>
-                  <strong class="number" data-number="420">0</strong>
+                  <strong class="number" data-number="5">0</strong>
                 </div>
               </div>
             </div>
@@ -281,7 +283,7 @@
               <div class="block-18">
                 <div class="text">
                   <span class="ftco-label">Project done</span>
-                  <strong class="number" data-number="890">0</strong>
+                  <strong class="number" data-number="5">0</strong>
                 </div>
               </div>
             </div>
@@ -305,14 +307,15 @@
             <div class="col-md-5 text-center">
               <div class="ftco-footer-widget mb-5">
                 <ul class="ftco-footer-social list-unstyled">
-                  <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                  <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                  <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                  <li class="ftco-animate"><a href="https://www.twitter.com/azens1995"><span class="icon-twitter"></span></a></li>
+                  <li class="ftco-animate"><a href="https://www.facebook.com/azens1995"><span class="icon-facebook"></span></a></li>
+                  <li class="ftco-animate"><a href="https://www.medium.com/@azens1995"><span class="icon-medium"></span></a></li>
+                  <li class="ftco-animate"><a href="https://join.skype.com/invite/oc08XICYoRCQ"><span class="icon-skype"></span></a></li>
                 </ul>
               </div>
               <div class="ftco-footer-widget">
                 <h2 class="mb-3">Contact Us</h2>
-                <p class="h3 email"><a href="#">info@email.com</a></p>
+                <p class="h3 email"><a href="#">azens1995@gmail.com</a></p>
               </div>
             </div>
           </div>
