--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@
                 >
                   <div class="icon mb-3"><span class="icon-code"></span></div>
                   <div class="media-body">
-                    <h3 class="heading">HTML/CSS</h3>
-                    <h3 class="heading">Prototyping</h3>
-                    <h3 class="heading">User Testing</h3>
+                    <h3 class="heading">HTML/CSS/jQuery</h3>
+                    <h3 class="heading">Java Spring</h3>
+                    <h3 class="heading">Kotlin</h3>
                   </div>
                 </div>
               </div>
