--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                   <div class="media-body">
                     <h3 class="heading">HTML/CSS/jQuery</h3>
                     <h3 class="heading">Java Spring</h3>
-                    <h3 class="heading">Kotlin</h3>
+                    <h3 class="heading">Kotlin/Android App</h3>
                   </div>
                 </div>
               </div>
