--- a/index.html
+++ b/index.html
@@ -157,27 +157,27 @@
                     </p>
                     <ul class="ftco-footer-social list-unstyled mt-4">
                       <li>
-                        <a href="https://www.linkedin.com/in/eklakdangaura/"
+                        <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/eklakdangaura/"
                           ><span class="icon-linkedin"></span
                         ></a>
                       </li>
                       <li>
-                        <a href="https://www.twitter.com/azens1995"
+                        <a target="_blank" rel="noopener noreferrer" href="https://www.twitter.com/azens1995"
                           ><span class="icon-twitter"></span
                         ></a>
                       </li>
                       <li>
-                        <a href="https://www.facebook.com/azens1995"
+                        <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/azens1995"
                           ><span class="icon-facebook"></span
                         ></a>
                       </li>
                       <li>
-                        <a href="https://www.medium.com/@azens1995"
+                        <a target="_blank" rel="noopener noreferrer" href="https://www.medium.com/@azens1995"
                           ><span class="icon-medium"></span
                         ></a>
                       </li>
                       <li>
-                        <a href="https://join.skype.com/invite/oc08XICYoRCQ"
+                        <a target="_blank" rel="noopener noreferrer" href="https://join.skype.com/invite/oc08XICYoRCQ"
                           ><span class="icon-skype"></span
                         ></a>
                       </li>
