--- a/index.html
+++ b/index.html
@@ -345,6 +345,9 @@
             <div class="row">
               <div class="col-md-12 text-center">
                 <p>
+                  <br>
+                  <a href="privacy_policy.html">Privacy Policy GA</a>
+                  <br>
                   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                   Copyright &copy;<script>
                     document.write(new Date().getFullYear());
