updaste privacy policy link

--- a/index.html
+++ b/index.html
@@ -349,6 +349,11 @@
                 </p>
                 </br>
                 <p>
+                  <p>
+                   <a href="tharuPatroPrivacyPolicy.html">Tharu Patro Privacy Policy</a> 
+                </p>
+                </br>
+                <p>
                   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                   Copyright &copy;<script>
                     document.write(new Date().getFullYear());
