FEAT: Update porfolio profile

--- a/index.html
+++ b/index.html
@@ -36,27 +36,6 @@
       <div class="KW_progressBar"></div>
     </div>
     <div class="page">
-      <!-- <nav id="colorlib-main-nav" role="navigation">
-      <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
-      <div class="js-fullheight colorlib-table">
-        <div class="img" style="background-image: url(images/azens_2.jpg);"></div>
-        <div class="colorlib-table-cell js-fullheight">
-          <div class="row no-gutters">
-            <div class="col-md-12 text-center">
-              <h1 class="mb-4"><a href="index.html" class="logo">Eklak Dangaura</a></h1>
-              <ul>
-                <li class="active"><a href="index.html"><span><small>01</small>Home</span></a></li>
-                <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
-                <li><a href="services.html"><span><small>03</small>Services</span></a></li>
-                <li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
-                <li><a href="blog.html"><span><small>05</small>Blog</span></a></li>
-                <li><a href="contact.html"><span><small>06</small>Contact</span></a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </nav> -->
 
       <div id="colorlib-page">
         <header>
@@ -72,9 +51,6 @@
                     >Eklak Dangaura</a
                   >
                 </div>
-                <!-- <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"
-                  ><i></i
-                ></a> -->
               </div>
             </div>
           </div>
@@ -122,7 +98,7 @@
                     class="mb-3"
                     data-scrollax="properties: {translateY: '30%', opacity: 1.6}"
                   >
-                    An Android Developer
+                    A FullStack Developer
                   </h1>
                 </div>
               </div>
@@ -143,17 +119,14 @@
               <div class="col-md-6 wrap ftco-animate">
                 <div class="about-desc">
                   <h1 class="bold-text">About</h1>
-                  <div class="p-5">
+                  <br class="p-5">
                     <h2 class="mb-5">Hi! I'm Eklak Dangaura</h2>
-                    <p>
-                      Engineer by Profession, Poet by hobby, Android Developer
-                      as per Work.<br />I am constantly in seek of new knowledge
-                      and tries to improve the previous ones.<br />
-                      One belive: "Always try to be your 100%, no matter what
-                      you do, where you do."
-                    </p>
-                    <p>
-                      <a href="#">Checkout my resume</a>
+                    <br>
+                      An experienced FullStack Engineer with <b>5+ years of professional experience</b> in Mobile as well as Web development.</br>
+                      Demonstrated knowledge about various domains including Education, Health and Service.</br>
+                      Experience includes Application development, Planning with Project Estimation and Resource management,
+                      Proper documentation about features and products, experienced in working following agile principles(Scrum and Kanban).
+                      Learning and Sharing knowledge by mentoring others.
                     </p>
                     <ul class="ftco-footer-social list-unstyled mt-4">
                       <li>
@@ -168,7 +141,7 @@
                         <a
                           target="_blank"
                           rel="noopener noreferrer"
-                          href="https://www.twitter.com/azens1995"
+                          href="https://www.twitter.com/perleklak"
                           ><span class="icon-twitter"></span
                         ></a>
                       </li>
@@ -178,6 +151,14 @@
                           rel="noopener noreferrer"
                           href="https://www.facebook.com/azens1995"
                           ><span class="icon-facebook"></span
+                        ></a>
+                      </li>
+                      <li>
+                        <a
+                          target="_blank"
+                          rel="noopener noreferrer"
+                          href="https://blog.eklak.dev"
+                          ><span class="icon-web"></span
                         ></a>
                       </li>
                       <li>
@@ -210,7 +191,7 @@
           <div class="container">
             <div class="row justify-content-center mb-5 pb-5">
               <div class="col-md-7 text-center heading-section ftco-animate">
-                <span>What i do</span>
+                <span>What I do</span>
                 <h2>My services</h2>
               </div>
             </div>
@@ -219,11 +200,25 @@
                 <div
                   class="media block-6 services p-3 py-4 d-block text-center"
                 >
-                  <div class="icon mb-3"><span class="icon-layers"></span></div>
+                  <div class="icon mb-3"><span class="icon-android"></span></div>
                   <div class="media-body">
                     <h3 class="heading">Mobile App Development</h3>
+                    <h4 class="description">XML based UIs</h4>
+                    <h4 class="description">MVP, MVVM patterns</h4>
+                    <h4 class="description">Online/Offline Data Synchronization</h4>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 d-flex align-self-stretch ftco-animate">
+                <div
+                  class="media block-6 services p-3 py-4 d-block text-center"
+                >
+                  <div class="icon mb-3"><span class="icon-web"></span></div>
+                  <div class="media-body">
                     <h3 class="heading">Web Development</h3>
-                    <h3 class="heading">Poem/Article Writing</h3>
+                    <h4 class="description">Backend Development: Java (Spring, Micronaut), NodeJS, NestJS</h4>
+                    <h4 class="description">Frontend Development: Javascript/Typescript, Angular, React</h4>
+                    <h4 class="description">Database: PostgreSQL</h4>
                   </div>
                 </div>
               </div>
@@ -231,23 +226,11 @@
                 <div
                   class="media block-6 services p-3 py-4 d-block text-center"
                 >
-                  <div class="icon mb-3"><span class="icon-gears"></span></div>
+                  <div class="icon mb-3"><span class="icon-assistant"></span></div>
                   <div class="media-body">
-                    <h3 class="heading">Product Strategy</h3>
-                    <h3 class="heading">Design Sprints</h3>
-                    <h3 class="heading">UX Strategy</h3>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-4 d-flex align-self-stretch ftco-animate">
-                <div
-                  class="media block-6 services p-3 py-4 d-block text-center"
-                >
-                  <div class="icon mb-3"><span class="icon-code"></span></div>
-                  <div class="media-body">
-                    <h3 class="heading">HTML/CSS/jQuery</h3>
-                    <h3 class="heading">Java Spring</h3>
-                    <h3 class="heading">Kotlin/Android App</h3>
+                    <h3 class="heading">Leadership and Agile</h3>
+                    <h4 class="description">Agile methodology for Project Management</h4>
+                    <h4 class="description">Small/Mid-level project lead with enthusiasm</h4>
                   </div>
                 </div>
               </div>
@@ -255,7 +238,7 @@
           </div>
         </section>
 
-        <section class="ftco-section ftco-counter" id="section-counter">
+        <!-- <section class="ftco-section ftco-counter" id="section-counter">
           <div class="container">
             <div class="row justify-content-center mb-5 pb-5">
               <div class="col-md-7 text-center heading-section ftco-animate">
@@ -294,7 +277,7 @@
               </div>
             </div>
           </div>
-        </section>
+        </section> -->
 
         <footer class="ftco-footer ftco-bg-dark ftco-section">
           <div class="container">
@@ -306,7 +289,7 @@
                       <a
                         target="_blank"
                         rel="noopener noreferrer"
-                        href="https://www.twitter.com/azens1995"
+                        href="https://www.twitter.com/perleklak"
                         ><span class="icon-twitter"></span
                       ></a>
                     </li>
@@ -322,7 +305,7 @@
                       <a
                         target="_blank"
                         rel="noopener noreferrer"
-                        href="https://www.medium.com/@azens1995"
+                        href="https://www.medium.com/@perleklak"
                         ><span class="icon-medium"></span
                       ></a>
                     </li>
@@ -344,14 +327,14 @@
             </div>
             <div class="row">
               <div class="col-md-12 text-center">
+                <div style="display: none;">
                 <p>
                    <a href="privacy_policy.html">Privacy Policy GA</a> 
                 </p>
-                </br>
-              
                   <p>
                    <a href="tharuPatroPrivacyPolicy.html">Tharu Patro Privacy Policy</a> 
                 </p>
+              </div>
                 </br>
                 <p>
                   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
