feat: add description update

--- a/index.html
+++ b/index.html
@@ -117,16 +117,16 @@
               ></div>
               <div class="col-md-2"></div>
               <div class="col-md-6 wrap ftco-animate">
-                <div class="about-desc">
+                <br class="about-desc">
                   <h1 class="bold-text">About</h1>
                   <br class="p-5">
                     <h2 class="mb-5">Hi! I'm Eklak Dangaura</h2>
                     <br>
                       An experienced FullStack Engineer with <b>5+ years of professional experience</b> in Mobile as well as Web development.</br>
                       Demonstrated knowledge about various domains including Education, Health and Service.</br>
-                      Experience includes Application development, Planning with Project Estimation and Resource management,
-                      Proper documentation about features and products, experienced in working following agile principles(Scrum and Kanban).
-                      Learning and Sharing knowledge by mentoring others.
+                      Experienced in overall lifecyle of the software development.
+                      Experienced in using technologies like Java, NodeJS, AWS, Docker.</br>
+                      <b>Technology</b>: Java, NodeJS, TypeScript, JavaScript, NestJS, PostgreSQL
                     </p>
                     <ul class="ftco-footer-social list-unstyled mt-4">
                       <li>
@@ -165,7 +165,7 @@
                         <a
                           target="_blank"
                           rel="noopener noreferrer"
-                          href="https://www.medium.com/@azens1995"
+                          href="https://perleklak.medium.com/"
                           ><span class="icon-medium"></span
                         ></a>
                       </li>
@@ -179,7 +179,7 @@
                       </li>
                     </ul>
                     <h5>Contact me here!</h5>
-                    <p>Email: <a href="#">azens1995@gmail.com</a></p>
+                    <p>Email: <a href="#">eklak.dev@gmail.com</a></p>
                   </div>
                 </div>
               </div>
@@ -218,6 +218,7 @@
                     <h3 class="heading">Web Development</h3>
                     <h4 class="description">Backend Development: Java (Spring, Micronaut), NodeJS, NestJS</h4>
                     <h4 class="description">Frontend Development: Javascript/Typescript, Angular, React</h4>
+                    <h4 class="description">Cloud: AWS(EC2, Lambda, S3, Arora, CloudWatch, SES, SQS, Amplify), Azure, Docker</h4>
                     <h4 class="description">Database: PostgreSQL</h4>
                   </div>
                 </div>
@@ -229,55 +230,14 @@
                   <div class="icon mb-3"><span class="icon-assistant"></span></div>
                   <div class="media-body">
                     <h3 class="heading">Leadership and Agile</h3>
-                    <h4 class="description">Agile methodology for Project Management</h4>
-                    <h4 class="description">Small/Mid-level project lead with enthusiasm</h4>
+                    <h4 class="description">Agile methodology for Project Management (Scrum)</h4>
+                    <h4 class="description">Leading small and medium sized proejcts</h4>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </section>
-
-        <!-- <section class="ftco-section ftco-counter" id="section-counter">
-          <div class="container">
-            <div class="row justify-content-center mb-5 pb-5">
-              <div class="col-md-7 text-center heading-section ftco-animate">
-                <span>Portfolio</span>
-                <h2>I love to share my achievements</h2>
-              </div>
-            </div>
-            <div class="row d-flex justify-content-start">
-              <div class="col-md-5 col-sm-5 counter-wrap ftco-animate">
-                <div class="block-18">
-                  <div class="text">
-                    <span class="ftco-label">Clients</span>
-                    <strong class="number" data-number="5">0</strong>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="row d-flex justify-content-center">
-              <div class="col-md-5 col-sm-5 counter-wrap ftco-animate">
-                <div class="block-18">
-                  <div class="text">
-                    <span class="ftco-label">Project done</span>
-                    <strong class="number" data-number="5">0</strong>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="row d-flex justify-content-end">
-              <div class="col-md-5 counter-wrap ftco-animate">
-                <div class="block-18">
-                  <div class="text">
-                    <span class="ftco-label">Cups of coffee</span>
-                    <strong class="number" data-number="1000">0</strong>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section> -->
 
         <footer class="ftco-footer ftco-bg-dark ftco-section">
           <div class="container">
@@ -305,7 +265,7 @@
                       <a
                         target="_blank"
                         rel="noopener noreferrer"
-                        href="https://www.medium.com/@perleklak"
+                        href="https://perleklak.medium.com"
                         ><span class="icon-medium"></span
                       ></a>
                     </li>
@@ -320,8 +280,8 @@
                   </ul>
                 </div>
                 <div class="ftco-footer-widget">
-                  <h2 class="mb-3">Contact Us</h2>
-                  <p class="h3 email"><a href="#">azens1995@gmail.com</a></p>
+                  <h2 class="mb-3">Contact Me</h2>
+                  <p class="h3 email"><a href="#">eklak.dev@gmail.com</a></p>
                 </div>
               </div>
             </div>
