remove duplicate data

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                       An experienced FullStack Engineer with <b>5+ years of professional experience</b> in Mobile as well as Web development.</br>
                       Demonstrated knowledge about various domains including Education, Health and Service.</br>
                       Experienced in overall lifecyle of the software development.
-                      Experienced in using technologies like Java, NodeJS, AWS, Docker.</br>
+                      Experienced in US Health Care using HL7, FHIR APIs</br>
                       <b>Technology</b>: Java, NodeJS, TypeScript, JavaScript, NestJS, PostgreSQL
                     </p>
                     <ul class="ftco-footer-social list-unstyled mt-4">
