update minor details

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     class="mb-3"
                     data-scrollax="properties: {translateY: '30%', opacity: 1.6}"
                   >
-                    A FullStack Developer
+                    A FullStack Engineer
                   </h1>
                 </div>
               </div>
