--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                       </li>
                     </ul>
                     <h5>Contact me here!</h5>
-                    <p>Email: <a href="#">eklak.dev@gmail.com</a></p>
+                    <p>Email: <a href="mailto:me@eklak.dev">me@eklak.dev</a></p>
                   </div>
                 </div>
               </div>
