Update contact email

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 </div>
                 <div class="ftco-footer-widget">
                   <h2 class="mb-3">Contact Me</h2>
-                  <p class="h3 email"><a href="#">eklak.dev@gmail.com</a></p>
+                  <p class="h3 email"><a href="mailto:me@eklak.dev">me@eklak.dev</a></p>
                 </div>
               </div>
             </div>
